--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -30,6 +30,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-feather": "2.0.9",
+    "react-query": "^3.34.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-use": "^17.3.1",
