--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - mainnet
       - production
+      - feature/gh-actions
 
 jobs:
   set_environment:
@@ -12,7 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - id: setenv
-      run: echo "::set-output name=env_name::${GITHUB_REF#refs/heads/}"
+      #run: echo "::set-output name=env_name::${GITHUB_REF#refs/heads/}"
+      run: echo "::set-output name=env_name::mainnet"
 
   build:
     name: Create Release
@@ -61,7 +63,15 @@ jobs:
           pinata-api-key: ${{ secrets.IPFS_DEPLOY_PINATA__API_KEY }}
           pinata-secret-api-key: ${{ secrets.IPFS_DEPLOY_PINATA__SECRET_API_KEY }}
 
-      - name: Update DNS with new IPFS hash
+      - name: Update Origin Path on CloudFront
+        env:
+          IPFS_DEPLOY_AWS_REGION: ${{ secrets.IPFS_DEPLOY_AWS_REGION }}
+          IPFS_DEPLOY_AWS_ACCESS_KEY_ID: ${{ secrets.IPFS_DEPLOY_AWS_ACCESS_KEY_ID }}
+          IPFS_DEPLOY_AWS_SECRET_ACCESS_KEY: ${{ secrets.IPFS_DEPLOY_AWS_SECRET_ACCESS_KEY }}
+          IPFS_DEPLOY_AWS_CLOUDFRONT_DISTRIBUTION_ID: ${{ secrets.IPFS_DEPLOY_AWS_CLOUDFRONT_DISTRIBUTION_ID }}
+        run: IPFS_HASH="${{ steps.upload.outputs.hash }}" node ./scripts/update_cloudfront.js
+
+      - name: Update CloudFlare DNS with new IPFS hash
         env:
           CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
           RECORD_DOMAIN: 'hop.exchange'
