core/frontend/hop-node/sdk: rename -> gnosis chain
TODO:
- update s3 config data.bonders / uncomment line 128 in `sdk/src/Base.ts`
- update env var: REACT_APP_ENABLED_CHAINS='ethereum,arbitrum,optimism,polygon,gnosis'

--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -11,7 +11,7 @@
     "declarationMap": true,
     "skipLibCheck": true,
     "target": "es2015",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noUnusedLocals": false,
     "moduleResolution": "node",
     "sourceMap": false,
