hop-node: set node version >=14. update lockfile.

--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -4,7 +4,7 @@
   "description": "The Hop Node for Hop Protocol",
   "main": "dist/index.js",
   "engines": {
-    "node": "^14",
+    "node": ">=14",
     "yarn": "^1.22.11"
   },
   "scripts": {
