--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "4.0.0-alpha.60",
+    "@tanstack/react-table": "^8.0.0-alpha.1",
     "bnc-onboard": "^1.37.0",
     "classnames": "2.2.6",
     "clsx": "1.1.1",
@@ -30,11 +31,13 @@
     "numbro": "^2.3.2",
     "qs": "^6.10.3",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-feather": "2.0.9",
     "react-query": "^3.34.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "react-table": "^7.7.0",
     "react-use": "^17.3.1",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5",
