--- a/packages/stats-worker/package.json
+++ b/packages/stats-worker/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "^14",
+    "node": ">=14",
     "yarn": "^1.22.11"
   },
   "scripts": {
