--- a/packages/stats-worker/package.json
+++ b/packages/stats-worker/package.json
@@ -12,10 +12,11 @@
     "start:apr": "ts-node src/index.ts --apr",
     "start:volume": "ts-node src/index.ts --volume",
     "start:tvl": "ts-node src/index.ts --tvl",
+    "start:fees": "ts-node src/index.ts --fees",
     "build": "tsc",
     "lint": "prettier-standard --format",
     "clean": "rimraf dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest test"
   },
   "author": "",
   "license": "MIT",
@@ -29,7 +30,7 @@
     "@types/uuid": "^8.3.3",
     "dotenv": "^10.0.0",
     "ethereum-block-by-date": "^1.4.2",
-    "ethers": "^5.4.6",
+    "ethers": "^5.5.4",
     "luxon": "^2.1.1",
     "minimist": "^1.2.5",
     "sqlite3": "^5.0.2",
@@ -38,8 +39,12 @@
     "wait": "^0.4.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "eslint-plugin-jest": "^26.1.0",
+    "jest": "^27.5.1",
     "prettier-standard": "^16.4.1",
     "rimraf": "^3.0.2",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.2.1"
   }
 }
