stats-worker: Fix bonder balance

--- a/packages/stats-worker/package.json
+++ b/packages/stats-worker/package.json
@@ -25,9 +25,11 @@
     "@hop-protocol/core": "0.0.1-beta.60",
     "@hop-protocol/sdk": "0.0.1-beta.294",
     "@pinata/sdk": "^1.1.23",
+    "@types/lodash": "^4.14.178",
     "@types/luxon": "^2.0.7",
     "@types/node": "^16.7.10",
     "@types/uuid": "^8.3.3",
+    "csv-writer": "^1.6.0",
     "dotenv": "^10.0.0",
     "ethereum-block-by-date": "^1.4.2",
     "ethers": "^5.5.4",
