--- a/packages/stats-worker/Dockerfile
+++ b/packages/stats-worker/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:14
+FROM node:14 AS build
 
 # Create the working directory and give node use permissions
 RUN mkdir -p /usr/src/app/node_modules && chown -R node:node /usr/src/app
@@ -13,5 +13,11 @@ COPY --chown=node:node . .
 RUN npm install
 RUN npm run build
 
-ENTRYPOINT [ "./bin/stats" ]
-CMD [ "" ]
+FROM node:14-alpine
+WORKDIR /usr/src/app
+COPY --from=build /usr/src/app/node_modules /usr/src/app/node_modules
+COPY --from=build /usr/src/app/dist /usr/src/app/dist
+COPY --from=build /usr/src/app/bin /usr/src/app/bin
+COPY --from=build /usr/src/app/*.json /usr/src/app/
+ENTRYPOINT [ "/usr/src/app/bin/stats" ]
+CMD []
