--- a/packages/frontend/public/manifest.json
+++ b/packages/frontend/public/manifest.json
@@ -11,5 +11,8 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+
+  "description": "Hop is a scalable rollup-to-rollup general token bridge. It allows users to send tokens from one rollup or sidechain to another almost immediately without having to wait for the networks challenge period.",
+  "iconPath": "/images/hop_logo.png"
 }
