frontend: Add WithdrawalProof class and page

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -20,10 +20,12 @@
     "dayjs": "^1.10.7",
     "deepmerge": "^4.2.2",
     "dotenv": "8.2.0",
+    "ethereumjs-util": "^7.1.4",
     "ethers": "^5.5.1",
     "fast-memoize": "^2.5.2",
     "lodash": "^4.17.21",
     "luxon": "1.25.0",
+    "merkletreejs": "^0.2.27",
     "numbro": "^2.3.2",
     "qs": "^6.10.3",
     "react": "^17.0.2",
