--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-cloudfront": "^3.45.0",
+    "@gnosis.pm/safe-apps-sdk": "^7.0.0",
     "@hop-protocol/core": "0.0.1-beta.61",
     "@hop-protocol/sdk": "0.0.1-beta.296",
     "@material-ui/core": "^4.12.3",
