frontend: WithdrawPage: Use modal

--- a/packages/frontend/.eslintrc.json
+++ b/packages/frontend/.eslintrc.json
@@ -40,6 +40,7 @@
     "arrow-body-style": 0,
     "no-underscore-dangle": 0,
     "node/handle-callback-err": 0,
+    "no-async-promise-executor": 0,
     "react/prop-types": 0,
     "react-hooks/exhaustive-deps": 0,
     "react-hooks/rules-of-hooks": 0,
