--- a/package.json
+++ b/package.json
@@ -12,8 +12,5 @@
     "bootstrap": "npx lerna bootstrap",
     "nuke": "npx lerna clean"
   },
-  "dependencies": {
-    "@ensdomains/ensjs": "^2.1.0",
-    "ethers": "^5.5.4"
-  }
+  "dependencies": {}
 }
