--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-cloudfront": "^3.45.0",
+    "@ensdomains/ensjs": "^2.1.0",
     "@hop-protocol/core": "0.0.1-beta.61",
     "@hop-protocol/sdk": "0.0.1-beta.299",
     "@material-ui/core": "^4.12.3",
@@ -21,7 +22,7 @@
     "deepmerge": "^4.2.2",
     "dotenv": "8.2.0",
     "ethereumjs-util": "^7.1.4",
-    "ethers": "^5.5.1",
+    "ethers": "^5.5.4",
     "fast-memoize": "^2.5.2",
     "lodash": "^4.17.21",
     "luxon": "1.25.0",
