--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-cloudfront": "^3.45.0",
+    "@gnosis.pm/safe-apps-sdk": "^7.0.0",
     "@hop-protocol/core": "0.0.1-beta.61",
     "@hop-protocol/sdk": "0.0.1-beta.299",
     "@material-ui/core": "^4.12.3",
@@ -110,6 +111,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "ipfs-deploy": "^11.1.0",
     "lerna-sync-version": "0.0.5",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.3.4"
   }
