--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -36,6 +36,7 @@
     "react-query": "^3.34.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "react-table": "^7.7.0",
     "react-use": "^17.3.1",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5",
