--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -113,6 +113,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "ipfs-deploy": "^11.1.0",
     "lerna-sync-version": "0.0.5",
+    "netlify-cli": "^9.12.3",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.3.4"
