--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -30,11 +30,13 @@
     "numbro": "^2.3.2",
     "qs": "^6.10.3",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-feather": "2.0.9",
     "react-query": "^3.34.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "react-table": "^7.7.0",
     "react-use": "^17.3.1",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5",
@@ -111,6 +113,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "ipfs-deploy": "^11.1.0",
     "lerna-sync-version": "0.0.5",
+    "netlify-cli": "^9.12.3",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.3.4"
