--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@aws-sdk/client-cloudfront": "^3.45.0",
     "@gnosis.pm/safe-apps-react-sdk": "^4.3.1",
+    "@gnosis.pm/safe-apps-sdk": "^7.3.0",
     "@hop-protocol/core": "0.0.1-beta.62",
     "@hop-protocol/sdk": "0.0.1-beta.302",
     "@material-ui/core": "^4.12.3",
