--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@eth-optimism/contracts": "^0.5.2",
     "@ethersproject/abi": "^5.4.0",
+    "@ethersproject/properties": "^5.6.0",
     "@hop-protocol/core": "0.0.1-beta.62",
     "@maticnetwork/maticjs": "^2.0.38",
     "dotenv": "^8.2.0",
