--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -39,6 +39,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@alch/alchemy-web3": "^1.3.0",
     "@aws-sdk/client-s3": "^3.33.0",
     "@eth-optimism/contracts": "^0.5.3",
     "@eth-optimism/core-utils": "^0.5.2",
