--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clipboard": "^2.0.10",
+    "ethers": "^5.6.2",
+    "luxon": "^2.3.1",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
