--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -100,6 +100,7 @@
     "@types/react": "^17.0.31",
     "@types/react-dom": "^17.0.10",
     "@types/react-router-dom": "^5.3.1",
+    "@types/react-table": "^7.7.10",
     "@types/styled-components": "^5.1.14",
     "@types/styled-system": "^5.1.13",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
