--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "luxon": "^2.3.1",
     "next": "12.1.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "to-hex": "0.0.18"
   },
   "devDependencies": {
     "@types/luxon": "^2.3.1",
