--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -99,6 +99,7 @@
     "prompt": "^1.1.0",
     "rimraf": "^3.0.2",
     "subleveldown": "^6.0.1",
+    "to-hex": "0.0.18",
     "uuid": "^8.3.2",
     "web3": "^1.3.5",
     "web3-utils": "^1.3.4"
