--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -101,8 +101,8 @@
     "subleveldown": "^6.0.1",
     "to-hex": "0.0.18",
     "uuid": "^8.3.2",
-    "web3": "^1.3.5",
-    "web3-utils": "^1.3.4"
+    "web3": "1.7.1",
+    "web3-utils": "1.7.1"
   },
   "devDependencies": {
     "@types/commander": "^2.12.2",
